--- a/package.json
+++ b/package.json
@@ -9,26 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@stellar/stellar-sdk": "^12.3.0",
     "@tanstack/react-query": "^5.59.15",
-    "ahooks": "^3.8.1",
-    "antd": "^5.21.5",
-    "class-variance-authority": "^0.7.0",
+    "@walletconnect/sign-client": "^2.17.2",
+    "@walletconnect/utils": "^2.17.2",
     "clsx": "^2.1.1",
-    "ethers": "^6.13.4",
-    "lucide-react": "^0.453.0",
-    "medium-zoom": "^1.1.0",
     "next": "^14.2.14",
-    "pino": "^9.5.0",
-    "pino-pretty": "^11.3.0",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-feather": "^2.0.10",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.16.12",
